--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,5 +8,35 @@
 </head>
 <body>
     <h1>Lasagna</h1>
+    <img src="../images/lasagna.png" alt="lasagna photo">
+
+    <h3>A great and easy recipe for homemade lasagna!</h3>
+    <p>"<strong> Very good lasagna! </strong> My husband & I enjoyed it very much. I made a few changes, 
+        I used ground turkey instead of ground beef and also used Barilla lasagna oven 
+        ready-no boil noodles.I then added sliced mushrooms and shredded parmesan cheese. 
+        This recipe was very fast & easy to make! I'd recommend this to anyone. 
+        This one is definetly a keeper!"</p>
+    <p>"Good basic recipe, just needs a little oomph."</p>
+
+    <h4>Ingredients:</h4>
+    <ul>
+        <li>1 (16 ounce) package lasagna noodles</li>
+        <li>1 pound lean ground beef</li>
+        <li>salt and pepper to taste</li>
+        <li>1 (16 ounce) jar spaghetti sauce</li>
+        <li>1 clove garlic, minced</li>
+        <li>½ pound shredded mozzarella cheese</li>
+        <li>½ pound shredded Cheddar cheese</li>
+        <li>1 pint ricotta cheese</li>
+    </ul>
+
+    <h4>Steps:</h4>
+    <ol>
+        <li>Step 1: Bring a large pot of lightly salted water to a boil. Add pasta and cook for 8 to 10 minutes or until al dente; drain. </li>
+        <li>Step 2: Preheat oven to 350 degrees F (175 degrees C). In a large skillet over medium-high heat, brown beef and season with salt and pepper; drain. Stir in spaghetti sauce and garlic and simmer 5 minutes.</li>
+        <li>Step 3: In a medium bowl, combine mozzarella, Cheddar and ricotta; stir well. In 9x13 inch pan, alternate layers of noodles, meat mixture and cheese mixture until pan is filled.</li>
+        <li>Step 4: Bake in preheated oven for 30 minutes, or until cheese is melted and bubbly.</li>
+    </ol>
+
 </body>
 </html>
